Added all files

--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,22 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>PizzaNoastra</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Pizza Noastra</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Pizza Noastra este prima pizzerie din Ghioroc! Așa că dacă ești cumva din Ghioroc, Miniș, Cuvin, Păuliș, Sâmbăteni sau Covăsânț,Pizza Noastră e gata să-ți livreze o pizza caldă și delicioasă chiar la tine acasă!" />
+  <meta name="robots" content="index, follow"/>
+  <meta name="keywords" content="pizza ghioroc, pizzerie, pizza, pizza noastra, pizza minis, pizza cuvin, pizza mandruloc, pizza sambateni, ghioroc pizza" />
+  <link rel="canonical" href="http://pizzanoastra.ro/" />
+  <meta property="og:locale" content="ro_RO" />
+  <meta property="og:type" content="website" />
+  <meta name="og:title" property="og:title" content="Pizza Noastra" />
+  <meta property="og:description" content="Pizza Noastra este prima pizzerie din Ghioroc! Așa că dacă ești cumva din Ghioroc, Miniș, Cuvin, Păuliș, Sâmbăteni sau Covăsânț,Pizza Noastră e gata să-ți livreze o pizza caldă și delicioasă chiar la tine acasă!" />
+  <meta property="og:url" content="http://pizzanoastra.ro/" />
+  <meta property="og:site_name" content="Pizza Noastra" />
+
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
